# Nakedrag

./: .env  .env.sample  .gitignore  RAG_guide.md  README.md  agent_settings.example.json  agent_settings.json  app.py  check_env.py  check_tables.py  pyproject.toml  setup_ollama.bat
docs/: base_database.md  chunk_processor.md  cli.md  configuration.md  database_schema_modification.md  database_updater.md  document_processor.md  embedding_generator.md  ollama_configuration.md  rag_database.md  vector_database.md
results/: 20250531_151443_rag_initializerの仕様につ.md  20250531_154011_rag_initializerの仕様につ.md  20250601_152745_データベースのアップデートに関する仕様に.md
src/: __init__.py  base_database.py  chunk_processor.py  cli.py  database_maker.py  document_processor.py  embedding_generator.py  example_tool.py  main.py  markdown_converter.py  markdown_maker.py  mcp_server.py  rag_database.py  rag_service.py  rag_tools.py  vector_database.py
temp/: 1_rag_initializer.md  2_rag_service.md
test/: check_rag_data.py  inspect_databases.py  ollama_initializer.py  rag_search_test.py  source_matching.py  test_firewall_manager.py  test_librarian_agent.py  test_rag_initializer.py  test_rag_pipeline.py  test_rag_searcher.py  update_databases.py
web_data/: 0b8cd7c8-b786-4aa5-b977-60da9887f16e.json  0f202736-fcab-4e96-b966-fb56f2c10f54.json  1a79e798-4203-4fe1-9fc9-b4f4640adc35.json  217bc559-596a-491c-8ef6-01875eb39872.json  24fc4d87-2c67-49ea-8a92-ea9733bd836d.json  4c333a08-17fb-48d5-9bd7-1b22ac689b52.json  55d0dc19-1350-4abb-9992-4f0c9175e1b4.json  605f32c3-b481-4e3c-86aa-f1f978ba55a7.json  (+8 more)
(+34 files in other folders)
